--- a/datatypes.html
+++ b/datatypes.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Datatypes </h1>
-    <h2 id="result"></h2>
+    <h2 id="result"> </h2>
 
     <script>
         // String 
@@ -23,7 +23,7 @@
         // Array 
         let students = ['jatin', 'dhwani', 'deven', 34, 84]
         // document.getElementById('result').innerHTML = students[1]
-        
+
         // Objects  
 
         let person = {
@@ -31,6 +31,16 @@
             age: 21,
             skill: "mern stack developer"
         }
+
+        // undefined 
+        let jatin;
+        console.log(jatin);
+
+        // null 
+        let magan = null;
+        console.log(magan);
+
+        
 
 
 
