--- a/ecom/index.html
+++ b/ecom/index.html
@@ -16,15 +16,17 @@
         <h2>Amazon</h2>
         <div class="links">
             <p>Home</p>
-            <p>About</p>
+            <p>About</p>    
             <p>Contact</p>
-
         </div>
-        <div class="cart">
+        <div class="cart" onclick="cartToggle()">
             <i class="fa-solid fa-shopping-bag"></i>
         </div>
     </div>
 
+    <div class="cartElement" id="cartElement">
+
+    </div>
 
     <div class="home" id="home">
 
