--- a/ecom/index.html
+++ b/ecom/index.html
@@ -16,7 +16,7 @@
         <h2>Amazon</h2>
         <div class="links">
             <p>Home</p>
-            <p>About</p>    
+            <p>About</p>
             <p>Contact</p>
         </div>
         <div class="cart" onclick="cartToggle()">
@@ -34,6 +34,11 @@
 
     </div>
 
+    <div>
+        <button>+</button>
+        <button>-</button>
+
+    </div>
 
 
 
