--- a/ecom/index.html
+++ b/ecom/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+
     <div class="navbar">
         <h2>Amazon</h2>
         <div class="links">
@@ -26,6 +27,13 @@
 
     <div class="cartElement" id="cartElement">
 
+        <div class="cartBody" id="cartBody">
+
+        </div>
+        <div class="cartHeader">
+            <h3>Cart</h3>
+            <div id="cartTotalPrice">0</div>
+        </div>
     </div>
 
     <div class="home" id="home">
